Fix invisible-but-clickable quick input form

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4142,6 +4142,7 @@ td.add a i {
 }
 #newtask {
   opacity: 0;
+  visibility: hidden;
   display: inline-block;
   vertical-align: top;
   margin: 6px 0 0 5px;
