--- a/public/less/style.less
+++ b/public/less/style.less
@@ -85,6 +85,7 @@ td.add {
 
 #newtask {
 	opacity: 0;
+	visibility: hidden;
 	display: inline-block;
 	vertical-align: top;
 	margin: 6px 0 0 5px;
